# agent-action-runtime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.md  design.md  threat-model.md
examples/: blocked_path_escape.json  blocked_sensitive_file.json  blocked_shell_destructive.json  blocked_shell_path_escape.json  blocked_shell_sensitive_file.json  safe_list_dir.json  safe_read.json  safe_shell.json  safe_write.json  shell_requires_approval.json  trace_demo.jsonl
examples/workspace/: notes.txt
src/agent_action_runtime/: __init__.py  cli.py  context.py  contracts.py  errors.py  executors.py  policy.py  replay.py  runtime.py  sandbox.py  tracing.py  validation.py
src/agent_action_runtime/filesystem/: __init__.py  operations.py  sandbox.py  sensitivity.py
src/agent_action_runtime/shell/: __init__.py  parser.py  policy.py  runner.py
tests/: test_cli.py  test_contracts.py  test_policy.py  test_replay.py  test_runtime.py  test_sandbox.py
