[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-action-runtime"
version = "0.1.0"
description = "Minimal controlled runtime for structured agent actions."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
agent-action-runtime = "agent_action_runtime.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]
line-length = 100
target-version = "py311"
